Capturando e formatando valor da despesa

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 type="text"
                 name="amount"
                 id="amount"
-                placeholder="0,00"
+                placeholder="R$ 0,00"
                 required
               />
             </fieldset>
@@ -89,4 +89,5 @@
       </section>
     </main>
   </body>
+  <script src="./scripts/script.js"></script>
 </html>
